--- a/navigation/about.html
+++ b/navigation/about.html
@@ -34,7 +34,7 @@ show_reading_time: false
         (u) =>
           u.name.includes("Nolan") ||
           u.name.includes("Kanhay") ||
-          u.name.includes("Arya")
+          u.name.includes("Arya"),
       );
 
       console.log(users);
