--- a/navigation/posts.html
+++ b/navigation/posts.html
@@ -8,27 +8,27 @@ permalink: /posts/
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.min.js"></script>
 <script>
   const socket = io.connect("http://127.0.0.1:8887");
-  socket.on('connect', () => {
-    console.log('Connected to the server');
+  socket.on("connect", () => {
+    console.log("Connected to the server");
   });
 
-  socket.on('chat_message', (data) => {
+  socket.on("chat_message", (data) => {
     displayMessage(`${data.user}: ${data.text}`);
   });
 
   function sendMessage() {
-    const username = document.getElementById('usernameInput').value;
-    const message = document.getElementById('messageInput').value;
+    const username = document.getElementById("usernameInput").value;
+    const message = document.getElementById("messageInput").value;
 
     if (username && message) {
-      socket.emit('chat_message', { user: username, text: message });
-      document.getElementById('messageInput').value = '';
+      socket.emit("chat_message", { user: username, text: message });
+      document.getElementById("messageInput").value = "";
     }
   }
 
   function displayMessage(message) {
-    const messageList = document.getElementById('messages');
-    const newMessage = document.createElement('li');
+    const messageList = document.getElementById("messages");
+    const newMessage = document.createElement("li");
     newMessage.textContent = message;
     messageList.appendChild(newMessage);
   }
@@ -72,7 +72,7 @@ permalink: /posts/
   button {
     width: 100%;
     padding: 10px;
-    background-color: #4CAF50;
+    background-color: #4caf50;
     color: white;
     border: none;
     border-radius: 4px;
