--- a/navigation/choose_classes.html
+++ b/navigation/choose_classes.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 
+title:
 permalink: /choose_classes/
 menu: nav/home.html
 search_exclude: true
@@ -49,7 +49,10 @@ show_reading_time: false
     cursor: pointer;
     margin: 20px auto;
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
-    transition: transform 0.2s ease, background 0.3s ease, margin 0.2s ease,
+    transition:
+      transform 0.2s ease,
+      background 0.3s ease,
+      margin 0.2s ease,
       box-shadow 0.3s ease;
     display: flex;
     justify-content: space-between;
@@ -94,11 +97,10 @@ show_reading_time: false
   }
 
   .selected-class {
-  background-color: white;
-  color: black;
-  border: 2px solid #4caf50;
-}
-
+    background-color: white;
+    color: black;
+    border: 2px solid #4caf50;
+  }
 </style>
 
 <!-- Header with Logo and Title -->
@@ -158,12 +160,10 @@ show_reading_time: false
               dropdown.classList.remove("open");
             } else {
               // If not open, close all dropdowns and open this one
-              document
-                .querySelectorAll(".dropdown.open")
-                .forEach((d) => {
-                  clearExistingClassButtons(d);
-                  d.classList.remove("open");
-                });
+              document.querySelectorAll(".dropdown.open").forEach((d) => {
+                clearExistingClassButtons(d);
+                d.classList.remove("open");
+              });
 
               // Add the "open" class to this dropdown
               dropdown.classList.add("open");
@@ -188,11 +188,10 @@ show_reading_time: false
                   selectedClasses[dropdown.textContent] = _class;
 
                   // Remove 'selected-class' from all buttons within the same period
-                  const siblings = classButtonContainer.querySelectorAll(
-                    ".class-button"
-                  );
+                  const siblings =
+                    classButtonContainer.querySelectorAll(".class-button");
                   siblings.forEach((sibling) =>
-                    sibling.classList.remove("selected-class")
+                    sibling.classList.remove("selected-class"),
                   );
 
                   // Add 'selected-class' to the clicked button
@@ -243,7 +242,7 @@ show_reading_time: false
           .then((response) => response.json())
           .then((data) => {
             let periodList = data.sort(
-              (period) => period.channel_name === "classlist"
+              (period) => period.channel_name === "classlist",
             );
 
             let makeNewPost = true;
