--- a/navigation/nolans.html
+++ b/navigation/nolans.html
@@ -7,7 +7,7 @@ search_exclude: true
 show_reading_time: false
 ---
 
-<table id="nolanTable"></table>
+<table id="nolanTable">
     <thead>
         <tr>
             <th>ID</th>
