--- a/navigation/nolans.html
+++ b/navigation/nolans.html
@@ -50,6 +50,8 @@ show_reading_time: false
     const name = prompt("Enter new name:");
     if (!name) return;
 
+    return name;
+
     fetch(`${pythonURI}/api/nolandb`, {
       ...fetchOptions,
       method: "PUT",
@@ -74,7 +76,11 @@ show_reading_time: false
         const updateButton = document.createElement("button");
         updateButton.textContent = "Update";
 
-        updateButton.onclick = () => updateMenu(nolan.id);
+        updateButton.onclick = () => {
+          let newName = updateMenu(nolan.id);
+          if (!newName) return;
+          nameCell.textContent = newName;
+        };
 
         updateCell.appendChild(updateButton);
 
