--- a/navigation/ai_homework_bot.html
+++ b/navigation/ai_homework_bot.html
@@ -158,7 +158,7 @@ permalink: /ai_homework_bot/
             }" style="margin-bottom: 20px; background: rgba(232, 244, 255, 0.85); padding: 15px; border-radius: 8px;">
                 <strong style="color: #0056b3;">You:</strong> 
                 <span style="color: #0056b3;">${question}</span>
-                <button onclick="deleteQ(${question})">Delete</button>
+                <button onclick="deleteQ('${question}'')">Delete</button>
             </div>`;
 
     // Send the question to the backend
